# dxf-k40-comms

./: .gitignore  CMakeLists.txt  README.md  dev_manager.sh
bash_scripts/: ai_build_run.sh  ai_diagnostics.sh  build.sh  check_deps.sh  clean.sh  glad_gen.sh  monitor.sh  run.sh  setup.sh
src/: base_window.cpp  base_window.h  main.cpp  renderer.h  wayland_manager.cpp  wayland_manager.h  window.cpp  window.h  window_data.h
src/ui/: box.cpp  box.h  layout.cpp  layout.h  layout_manager.cpp  layout_manager.h  touch_handler.cpp  touch_handler.h  ui_helpers.cpp  ui_helpers.h
